--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:xiaoblesense]
-platform = nordicnrf52
-board = xiaoblesense
+[env]
+platform = https://github.com/maxgerhardt/platform-nordicnrf52
 framework = arduino
+lib_deps = 
+  tanakamasayuki/I2C BM8563 RTC @ ^1.0.4
+  https://github.com/Seeed-Studio/Seeed_Arduino_LSM6DS3.git
+  
+[env:xiaoblesense_arduinocore_mbed]
+board = xiaoblesense
+
+[env:xiaoblesense_adafruit_nrf52]
+board = xiaoblesense_adafruit
+
+[env:xiaoble_arduinocore_mbed]
+board = xiaoble
+
+[env:xiaoble_adafruit_nrf52]
+board = xiaoble_adafruit
